--- a/Deployer/Deployer.csproj
+++ b/Deployer/Deployer.csproj
@@ -62,6 +62,24 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\AppSettingModule.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\AppSettingModule.Designer.cs">
+      <DependentUpon>AppSettingModule.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\ConnectionStringModule.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\ConnectionStringModule.Designer.cs">
+      <DependentUpon>ConnectionStringModule.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\DeployModule.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\DeployModule.Designer.cs">
+      <DependentUpon>DeployModule.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
