--- a/ProcessProtector/ProcessProtector.csproj
+++ b/ProcessProtector/ProcessProtector.csproj
@@ -76,6 +76,13 @@
     <Compile Include="ProcessProtectItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StrategyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StrategyForm.Designer.cs">
+      <DependentUpon>StrategyForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StrategyItem.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
