--- a/IISMonitor.v1/IISMonitor.v1.csproj
+++ b/IISMonitor.v1/IISMonitor.v1.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="iHawkAppControl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\_extLibrary\iHawkAppControl.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Web.Administration, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\IIS.Microsoft.Web.Administration.8.5.9600.17042\lib\Microsoft.Web.Administration.dll</HintPath>
       <Private>True</Private>
@@ -131,6 +127,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\iHawkApp\iHawkAppControl\iHawkAppControl.csproj">
+      <Project>{435283c0-b7a6-4b00-8ede-2576f7690841}</Project>
+      <Name>iHawkAppControl</Name>
+    </ProjectReference>
     <ProjectReference Include="..\iHawkIISLibrary\iHawkIISLibrary.csproj">
       <Project>{d33255ec-54b5-455c-91bb-e84aba06d01e}</Project>
       <Name>iHawkIISLibrary</Name>
