安装更新NLog类库

--- a/IISMonitor.v2/IISMonitor.v2.csproj
+++ b/IISMonitor.v2/IISMonitor.v2.csproj
@@ -36,6 +36,9 @@
     <ApplicationIcon>Resources\Icons-Land-Vista-Hardware-Devices-Home-Server.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=6.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.6.1.0\lib\net46\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -69,6 +72,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="packages.config" />
     <None Include="Resources\Icons-Land-Vista-Hardware-Devices-Home-Server.ico" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
