--- a/IISMonitor.v2/NLog.config
+++ b/IISMonitor.v2/NLog.config
@@ -1,45 +1,37 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="Off">
 
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-  <variable name="myvar" value="myvalue"/>
+  <variable name="logDir" value="${basedir}/logs"/>
+  <variable name="logLayout" value="${longdate} [${level:uppercase=true}] ${logger} - ${message}${onexception:inner= ${newline}${exception:format=tostring}}"/>
 
-  <!--
-  See https://github.com/nlog/nlog/wiki/Configuration-file
-  for information on customizing logging rules and outputs.
-   -->
   <targets>
+    <target xsi:type="File" name="infofile"
+            fileName="${logDir}/${shortdate}_info.log"
+            layout="${logLayout}"
+            encoding="utf-8"
+            archiveAboveSize="10485760"
+            maxArchiveFiles="30"/>
 
-    <!--
-    add your targets here
-    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
-    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
-    -->
+    <target xsi:type="File" name="warnfile"
+            fileName="${logDir}/${shortdate}_warn.log"
+            layout="${logLayout}"
+            encoding="utf-8"
+            archiveAboveSize="10485760"
+            maxArchiveFiles="30"/>
 
-    <!--
-    Write events to a file with the date in the filename.
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
-    <target xsi:type="File" name="infofile" fileName="${basedir}/logs/${shortdate}_info.log"/>
-    <target xsi:type="File" name="warnfile" fileName="${basedir}/logs/${shortdate}_warn.log"/>
-    <target xsi:type="File" name="errorfile" fileName="${basedir}/logs/${shortdate}_error.log"/>
+    <target xsi:type="File" name="errorfile"
+            fileName="${logDir}/${shortdate}_error.log"
+            layout="${logLayout}"
+            encoding="utf-8"
+            archiveAboveSize="10485760"
+            maxArchiveFiles="30"/>
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
-
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
     <logger name="*" level="Info" writeTo="infofile"/>
     <logger name="*" level="Warn" writeTo="warnfile"/>
     <logger name="*" level="Error" writeTo="errorfile"/>
